--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,7 @@
     <h2>Teams</h2>
     <h3>By Microsoft</h3>
     <a href="/video" class="btn">Video Call</a>
+    <a href="/chat" class="btn">Chat</a>
   </div>
 </header>
 
