--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -6,20 +6,15 @@
   </div>
   
 <div id="chat-app">
-    <h4>Real time chat</h4>
+    <h4>Real-Time Chat</h4>
     <br>
     <h2 id="username" style="display: none;"><%=user.name%></h2>
     <div id="chat-window">
         <div id="output"></div>
     </div>
-    
-
-    
     <input id="message" type="text" onfocus="this.value=''" placeholder="Message" />
     <button id="send" >Send</button>
 </div>
-
-
 
 </body>
 <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
